export interface Project {
    _id?: string;
    title: string;
}